--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>tao-oms</module>
       <module>oms-api</module>
     <module>oms-core</module>
+    <module>api</module>
   </modules>
 
   <properties>
