--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -9,8 +9,8 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-        username: nacos
-        password: nacos
+#        username: nacos
+#        password: nacos
     gateway:
       discovery:
         locator:
