--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -4,7 +4,12 @@ server:
 spring:
   application:
     name: api-service
-
+  security:
+    user:
+      name: admin
+      password: password
+    basic:
+      enabled: true
   cloud:
     nacos:
       discovery:
@@ -19,6 +24,20 @@ spring:
         - id: tao_oms_route
           uri: lb://tao-oms  # lb 表示从 nacos 中按照名称获取微服务,并遵循负载均衡策略，user-service 对应用户微服务应用名
           predicates:
-            - Path=/tao-api/**  # 使用断言
+            - Path=/tao-service/**  # 使用断言
           filters:
             - StripPrefix=1       # 使用过滤器
+#            - name: Security   # 添加安全过滤器
+#              args:
+#                springSecurityFilterChain: # 配置Spring Security过滤器链
+#                  order: 0
+#                  securityMatcher: org.springframework.security.web.util.matcher.AntPathRequestMatcher
+#                  securityFilter: org.springframework.security.web.server.SecurityWebFilterChainFilter
+#                  securityContextRepository: org.springframework.security.web.server.context.ServerSecurityContextRepository
+#                  serverAccessDeniedHandler: org.springframework.security.web.server.access.AccessDeniedHandlerImpl
+#                  serverAuthenticationEntryPoint: org.springframework.security.web.server.authentication.BasicAuthenticationEntryPoint
+
+## 授权规则
+#security:
+#  rules:
+#    - pattern: /api/tao-service/**   # 定义需要授权的URL模式
