api网关项目负责转发请求、过滤token等；tao-oms淘宝接口;oms-api公共项目包括登录处理；其他项目暂时没用

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -61,6 +61,25 @@
 <!--            <version>4.13.2</version>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
+        <!-- Token生成与解析-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
