--- a/oms-api/src/main/resources/application.yaml
+++ b/oms-api/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+mybatis-plus:
+  mapper-locations: classpath*:mapper/**/*Mapper.xml
+  type-aliases-package: com.qihang.oms.api.domain
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开启sql日志
+#mybatis:
+#  mapper-locations: classpath*:mappers/user/*.xml
+
 spring:
   cloud:
     loadbalancer:
@@ -22,6 +30,4 @@ server:
   port: 8082
 
 
-#mybatis-plus:
-#  mapper-locations: classpath*:mapper/**/*Mapper.xml
-#  type-aliases-package: com.qihang.core.domain.entity;com.qihang.erp.api.domain
+
