--- a/vue3/package.json
+++ b/vue3/package.json
@@ -111,8 +111,8 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
   },
-  "repository": "https://gitee.com/youlaiorg/vue3-element-admin.git",
-  "author": "有来开源组织",
+  "repository": "https://gitee.com/qiliping/qihang.ecom.oms.git",
+  "author": "启航",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
