--- a/tao-api/pom.xml
+++ b/tao-api/pom.xml
@@ -140,6 +140,13 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>taobao</groupId>
+            <artifactId>taobao-sdk</artifactId>
+            <version>0.20200820</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/taobao-sdk-0.20200820.jar</systemPath>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
