--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     <module>api</module>
 
     <module>core</module>
-<!--    <module>core/common</module>-->
+      <module>jd-api</module>
+      <!--    <module>core/common</module>-->
   </modules>
 
   <properties>
