--- a/jd-api/pom.xml
+++ b/jd-api/pom.xml
@@ -65,6 +65,18 @@
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
             <version>3.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>jd</groupId>
+            <artifactId>open-api-sdk</artifactId>
+            <version>2.0-2024-03-04</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/open-api-sdk-2.0-2024-03-04.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version> <!-- jd-sdk依赖 -->
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
