--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <module>core</module>
       <module>jd-api</module>
+      <module>oms-api</module>
+      <module>pdd-api</module>
+      <module>dou-api</module>
       <!--    <module>core/common</module>-->
   </modules>
 
