--- a/pdd-api/src/main/resources/application.yml
+++ b/pdd-api/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   cloud:
     nacos:
-      serverAddr: 127.0.0.1:8848
+#      serverAddr: 127.0.0.1:8848
       discovery:
+        server-addr: 127.0.0.1:8848
+      config:
         server-addr: 127.0.0.1:8848
   config:
     import:
