--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
       <module>oms-api</module>
       <module>pdd-api</module>
       <module>dou-api</module>
+      <module>wei-api</module>
       <!--    <module>core/common</module>-->
   </modules>
 
