优化tao订单消息

--- a/vue/package.json
+++ b/vue/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qihang-ecerp",
   "version": "0.1.1",
-  "description": "启航电商ERP系统",
+  "description": "启航电商OMS系统",
   "author": "qihang",
   "license": "MIT",
   "scripts": {
