新增视频号小店接口

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -59,6 +59,12 @@ spring:
             - Path=/api/pdd-api/**
           filters:
             - StripPrefix=2
+        - id: wei_api_route
+          uri: lb://wei-api
+          predicates:
+            - Path=/api/wei-api/**
+          filters:
+            - StripPrefix=2
 #            - TokenFilter
 #      default-filters:
 #        - TokenFilter
