--- a/core/security/pom.xml
+++ b/core/security/pom.xml
@@ -4,10 +4,10 @@
     <parent>
         <groupId>com.qihang</groupId>
         <artifactId>core</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.4.11</version>
     </parent>
 
-    <groupId>com.qihang</groupId>
+<!--    <groupId>com.qihang</groupId>-->
     <artifactId>security</artifactId>
     <packaging>jar</packaging>
 
