--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>api</artifactId>
     <packaging>jar</packaging>
-
+    <version>2.0.0</version>
     <name>api</name>
     <url>http://maven.apache.org</url>
 
