--- a/oms-api/pom.xml
+++ b/oms-api/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.qihang</groupId>
             <artifactId>security</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2.0.6</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
