--- a/sys-api/pom.xml
+++ b/sys-api/pom.xml
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>com.qihang</groupId>
             <artifactId>security</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
