整理oms菜单及前端项目文件

--- a/docs/qihang-oms.yaml
+++ b/docs/qihang-oms.yaml
@@ -30,10 +30,10 @@ spring:
   
 
 
-# # mybatis 日志
-# mybatis-plus:
-#     configuration:
-#       log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开启sql日志
+# mybatis 日志
+mybatis-plus:
+    configuration:
+      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开启sql日志
 
 
 # minio配置
