--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.qihang</groupId>
-  <artifactId>qihangec-oms</artifactId>
+  <artifactId>qihangerp-oms</artifactId>
   <version>2.0.6</version>
   <packaging>pom</packaging>
 
