优化tao店铺商品拉取、关联

--- a/open-api/pom.xml
+++ b/open-api/pom.xml
@@ -20,7 +20,7 @@
         <module>pdd-api</module>
         <module>dou-api</module>
         <module>wei-api</module>
-        <module>kwai-api</module>
+<!--        <module>kwai-api</module>-->
     </modules>
     <properties>
         <java.version>17</java.version>
