--- a/vue/package.json
+++ b/vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "qihang-ecerp",
-  "version": "0.1.1",
+  "name": "qihang-oms",
+  "version": "1.6.0",
   "description": "启航电商OMS系统",
   "author": "qihang",
   "license": "MIT",
