--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -82,7 +82,7 @@ spring:
 #security:
 #  rules:
 #    - pattern: /api/tao-service/**   # 定义需要授权的URL模式
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://127.0.0.1:8761/eureka/
