--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -7,7 +7,7 @@
         <version>3.0.2</version>
         <relativePath/>
     </parent>
-    <artifactId>api</artifactId>
+    <artifactId>gateway</artifactId>
     <packaging>jar</packaging>
     <version>2.0.0</version>
     <name>api</name>
