--- a/open-api/pom.xml
+++ b/open-api/pom.xml
@@ -134,7 +134,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/kuaishou-merchant-open-sdk-1.0.10.jar</systemPath>
         </dependency>
-
+        <dependency>
+            <groupId>cn.qihangerp.open</groupId>
+            <artifactId>open-sdk</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/open-sdk-1.0.jar</systemPath>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
