--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,9 @@
   <url>http://maven.apache.org</url>
   <modules>
     <module>sys-api</module>
-    <module>api</module>
+    <module>gateway</module>
     <module>core</module>
     <module>oms-api</module>
-    <module>open-api2</module>
-<!--    <module>eureka-server</module>-->
-<!--      <module>gateway</module>-->
     <module>open-api</module>
   </modules>
 
