--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -7,6 +7,7 @@
         <version>3.0.2</version>
         <relativePath/>
     </parent>
+    <groupId>cn.qihangerp</groupId>
     <artifactId>gateway</artifactId>
     <packaging>jar</packaging>
     <version>2.0.0</version>
