--- a/open-api/src/main/resources/application.yml
+++ b/open-api/src/main/resources/application.yml
@@ -1,16 +1,44 @@
+server:
+  port: 8081
+
 spring:
+  application:
+    name: open-api
   cloud:
     nacos:
 #      serverAddr: 127.0.0.1:8848
       discovery:
         server-addr: 127.0.0.1:8848
-      config:
-        server-addr: 127.0.0.1:8848
-  config:
-    import:
-      - nacos:qihang-oms.yaml?refresh=true
-  application:
-    name: open-api
+  data:
+    # redis 配置
+    redis:
+      # 地址
+      #    host: 8.130.98.215
+      host: 127.0.0.1
+      # 端口，默认为6379
+      port: 6379
+      # 数据库索引
+      database: 0
+      # 密码
+      #    password: 123321
+      # 连接超时时间
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池中的最小空闲连接
+          min-idle: 0
+          # 连接池中的最大空闲连接
+          max-idle: 8
+          # 连接池的最大数据库连接数
+          max-active: 8
+          # #连接池最大阻塞等待时间（使用负值表示没有限制）
+          max-wait: -1ms
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/qihang-oms?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    username: root
+    password: Andy_123
+
   kafka:
     bootstrap-servers: localhost:9092
     producer:
@@ -46,9 +74,6 @@ spring:
           timeout:
             ms: 18000 # 消费请求的超时时间
 
-
-server:
-  port: 8089
 
 
 mybatis-plus:
