--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,18 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.qihang</groupId>
-  <artifactId>qihangerp-oms</artifactId>
+  <groupId>cn.qihangerp</groupId>
+  <artifactId>qihangerp-cloud</artifactId>
   <version>2.0.6</version>
   <packaging>pom</packaging>
 
-  <name>qihangerp-oms</name>
+  <name>qihangerp-cloud</name>
   <url>http://maven.apache.org</url>
   <modules>
     <module>sys-api</module>
     <module>gateway</module>
-    <module>core</module>
+    <module>common</module>
+    <module>security</module>
     <module>oms-api</module>
     <module>open-api</module>
   </modules>
