--- a/sys-api/pom.xml
+++ b/sys-api/pom.xml
@@ -51,10 +51,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+<!--        </dependency>-->
         <!--SpringCloud Alibaba nacos 服务发现依赖-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -172,7 +172,7 @@
             <version>3.12.0</version>
         </dependency>
         <dependency>
-            <groupId>com.qihang</groupId>
+            <groupId>cn.qihangerp</groupId>
             <artifactId>security</artifactId>
             <version>2.0.6</version>
         </dependency>
